[gd_scene load_steps=2 format=3 uid="uid://dxxx"]

[ext_resource type="Script" path="res://scripts/ui/touch_controls.gd" id="1_script"]

[node name="TouchControls" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="Left" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -300.0
offset_right = 300.0
grow_vertical = 0

[node name="JoystickBase" type="TextureRect" parent="Left"]
modulate = Color(1, 1, 1, 0.3)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -230.0
offset_right = 230.0
offset_bottom = -30.0
grow_vertical = 0

[node name="JoystickThumb" type="TextureRect" parent="Left/JoystickBase"]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Right" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -300.0
grow_horizontal = 0
grow_vertical = 0

[node name="ActionButtons" type="Control" parent="Right"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -280.0
grow_horizontal = 0
grow_vertical = 0

[node name="JumpButton" type="TouchScreenButton" parent="Right/ActionButtons"]
modulate = Color(1, 1, 1, 0.3)
position = Vector2(-250, -120)
scale = Vector2(1.5, 1.5)

[node name="AttackButton" type="TouchScreenButton" parent="Right/ActionButtons"]
modulate = Color(1, 1, 1, 0.3)
position = Vector2(-120, -80)
scale = Vector2(1.5, 1.5)

[node name="DodgeButton" type="TouchScreenButton" parent="Right/ActionButtons"]
modulate = Color(1, 1, 1, 0.3)
position = Vector2(-180, -180)
scale = Vector2(1.5, 1.5) 